--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mongodb": "^5.8.1",
     "mongoose": "^7.4.1",
     "nanoid": "^5.0.1",
+    "node-cache": "^5.1.2",
     "uuid": "^9.0.0"
   }
 }
